[package]
name = "timezoned_rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["metrics"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]

[dependencies]
async-process = "1.7.0"
futures = "0.3.28"
log = "0.4.17"
maxminddb = { version = "0.23", features = ["mmap"] }
metrics = { version = "0.21.0", optional = true }
metrics-exporter-prometheus = { version = "0.12.1", features = ["http-listener"], optional = true }
pretty_env_logger = "0.5.0"
tokio = { version = "1.28.2", features = ["full"] }
