[package]
name = "timezoned_rs"
version = "1.0.0"
edition = "2024"

[features]
default = ["metrics"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]

[dependencies]
async-process = "2.3.0"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
maxminddb = { version = "0.26", features = ["mmap"] }
metrics = { version = "0.24.2", optional = true }
metrics-exporter-prometheus = { version = "0.17.0", features = ["http-listener"], optional = true }
tokio = { version = "1.44.2", features = ["full"] }
